# app/models/user.rb
@@ -1,8 +1,5 @@
 class User < ApplicationRecord
 
-  include Devise::JWT::RevocationStrategies::JTIMatcher
-
-  devise :database_authenticatable, :registerable, :validatable,
-         :jwt_authenticatable, jwt_revocation_strategy: self
+  has_secure_password :password, validations: false
 
 end
