# config/routes.rb
@@ -1,21 +1,10 @@
 # frozen_string_literal: true
 
 Rails.application.routes.draw do
-  get '/current_user', to: 'current_user#index'
-  devise_for :users, path: '', path_names: {
-                                 sign_in: 'login',
-                                 sign_out: 'logout',
-                                 registration: 'signup'
-                               },
-                     controllers: {
-                       sessions: 'users/sessions',
-                       registrations: 'users/registrations'
-                     }
   mount Rswag::Ui::Engine => '/spec'
   mount Rswag::Api::Engine => '/spec'
   namespace :api, format: :json do
-    namespace :users do
-      resources :favorites, only: %w[create index]
-    end
+    post 'sessions/sign-up', to: 'registrations#create'
+    post 'sessions/login', to: 'sessions#create'
   end
 end
